sizing on mobile now correct

--- a/app.css
+++ b/app.css
@@ -2,3 +2,29 @@ body {
   padding:0px;
   margin:0px;
 }
+
+.photo-text { 
+  color: #6c757d;
+  text-decoration: none;
+  font-size: 10px; 
+}
+
+.content-box {
+  margin: auto;
+  width: 500px;
+  max-width: 100%;
+}
+
+.max-width-viewport {
+  max-width: 100vw;
+}
+
+.flex-row {
+  display: flex;
+  flex-direction: row;
+}
+
+.align-center {
+  display: flex;
+  align-items: center;
+}
